Bug 1515296 - Remove some std::move to fix a gcc warning r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D61701